--- a/concourse/pipelines/linux-image-build.yaml
+++ b/concourse/pipelines/linux-image-build.yaml
@@ -691,6 +691,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/centos_7.publish.json"
       environment: "test"
+  - task: image-test-centos-7
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/centos-7-v((.:source-version))
 - name: publish-to-testing-centos-8
   plan:
   - get: guest-test-infra
@@ -1126,22 +1130,6 @@ jobs:
     vars:
       images: projects/bct-prod-images/global/images/debian-11-v((.:source-version))
 
-# Image test
-# centos
-- name: image-test-centos-7
-  plan:
-  - get: guest-test-infra
-    passed: [publish-to-testing-centos-7]
-    trigger: false
-    params:
-      skip_download: "true"
-  - task: get-credential
-    file: guest-test-infra/concourse/tasks/get-credential.yaml
-  - task: image-test-centos-7
-    file: guest-test-infra/concourse/tasks/image-test.yaml
-    vars:
-      images: projects/bct-prod-images/global/images/family/centos-7
-
 # Publish to staging
 # almalinux
 - name: publish-to-staging-almalinux-8
@@ -1194,11 +1182,6 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/centos_7.publish.json"
       environment: "staging"
-  - task: image-test-centos-7
-    file: guest-test-infra/concourse/tasks/image-test.yaml
-    vars:
-      images: projects/bct-prod-images/global/images/family/centos-7
-
 - name: publish-to-staging-centos-8
   plan:
   - get: guest-test-infra
@@ -1608,11 +1591,11 @@ jobs:
 - name: publish-to-prod-centos-7
   plan:
   - get: guest-test-infra
-    passed: [ image-test-centos-7 ]
-    trigger: false
-    params: { skip_download: "true" }
   - get: compute-image-tools
   - get: centos-7-gcs
+    passed: [publish-to-testing-centos-7]
+    trigger: false
+    params: {skip_download: "true"}
   - load_var: source-version
     file: centos-7-gcs/version
   - task: get-credential
@@ -2041,7 +2024,6 @@ groups:
   - publish-to-testing-centos-7
   - publish-to-testing-centos-8
   - publish-to-testing-centos-stream-8
-  - image-test-centos-7
   - publish-to-staging-centos-7
   - publish-to-staging-centos-8
   - publish-to-staging-centos-stream-8
